{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 57,
  "lineage": "c47cd72e-c9e4-842e-1c52-44bdb8acf303",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "my_elastic_ip_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-068a04a357d9c1133",
            "association_id": "eipassoc-03183c77e57f9f02f",
            "domain": "vpc",
            "id": "eipalloc-068a04a357d9c1133",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-024ad7a7354689120",
            "private_dns": "ip-10-0-1-197.eu-west-1.compute.internal",
            "private_ip": "10.0.1.197",
            "public_dns": "ec2-52-30-190-27.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.30.190.27",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "my_elastic_ip_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0486c053ffdbe0e43",
            "association_id": "eipassoc-0abcbcb2dac6d15cc",
            "domain": "vpc",
            "id": "eipalloc-0486c053ffdbe0e43",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0130bd15f81ed109d",
            "private_dns": "ip-10-0-2-115.eu-west-1.compute.internal",
            "private_ip": "10.0.2.115",
            "public_dns": "ec2-18-202-39-228.eu-west-1.compute.amazonaws.com",
            "public_ip": "18.202.39.228",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411194033911:internet-gateway/igw-02d4bed549d94386c",
            "id": "igw-02d4bed549d94386c",
            "owner_id": "411194033911",
            "tags": {
              "Name": "my_igw_01"
            },
            "tags_all": {
              "Name": "my_igw_01"
            },
            "vpc_id": "vpc-04653b7f9be0c1ae0"
          },
          "dependencies": [
            "aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "my_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:411194033911:loadbalancer/app/my-lb/bdb25831fa5fd46b",
            "arn_suffix": "app/my-lb/bdb25831fa5fd46b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-lb-1468355380.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:411194033911:loadbalancer/app/my-lb/bdb25831fa5fd46b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0452e2525e82c3cde"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0be79560a240d963e"
              },
              {
                "subnet_id": "subnet-0e315526dff890e90"
              }
            ],
            "subnets": [
              "subnet-0be79560a240d963e",
              "subnet-0e315526dff890e90"
            ],
            "vpc_id": "vpc-04653b7f9be0c1ae0",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.example_lb_sg",
            "aws_security_group.example_lb_sg2",
            "aws_subnet.my_subnet_01",
            "aws_subnet.my_subnet_02",
            "aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "example_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:411194033911:listener/app/my-lb/bdb25831fa5fd46b/47f28bed504394c6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:411194033911:targetgroup/my-tg/759e8ca830f5022a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:411194033911:listener/app/my-lb/bdb25831fa5fd46b/47f28bed504394c6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:411194033911:loadbalancer/app/my-lb/bdb25831fa5fd46b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.my_lb",
            "aws_lb_target_group.my_tg",
            "aws_security_group.example_lb_sg2",
            "aws_subnet.my_subnet_01",
            "aws_subnet.my_subnet_02",
            "aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "my_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:411194033911:targetgroup/my-tg/759e8ca830f5022a",
            "arn_suffix": "targetgroup/my-tg/759e8ca830f5022a",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:411194033911:targetgroup/my-tg/759e8ca830f5022a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "my-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04653b7f9be0c1ae0"
          },
          "dependencies": [
            "aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my_nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-068a04a357d9c1133",
            "association_id": "eipassoc-03183c77e57f9f02f",
            "connectivity_type": "public",
            "id": "nat-0dd5f230f09577bc0",
            "network_interface_id": "eni-024ad7a7354689120",
            "private_ip": "10.0.1.197",
            "public_ip": "52.30.190.27",
            "subnet_id": "subnet-0be79560a240d963e"
          },
          "dependencies": [
            "aws_eip.my_elastic_ip_01",
            "aws_subnet.my_subnet_01",
            "aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my_nat2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0486c053ffdbe0e43",
            "association_id": "eipassoc-0abcbcb2dac6d15cc",
            "connectivity_type": "public",
            "id": "nat-01097ed8c56b566a9",
            "network_interface_id": "eni-0130bd15f81ed109d",
            "private_ip": "10.0.2.115",
            "public_ip": "18.202.39.228",
            "subnet_id": "subnet-0e315526dff890e90"
          },
          "dependencies": [
            "aws_eip.my_elastic_ip_02",
            "aws_subnet.my_subnet_02",
            "aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_table1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411194033911:route-table/rtb-0b36b02c37caf445f",
            "id": "rtb-0b36b02c37caf445f",
            "owner_id": "411194033911",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02d4bed549d94386c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-route-table1"
            },
            "tags_all": {
              "Name": "my-route-table1"
            },
            "timeouts": null,
            "vpc_id": "vpc-04653b7f9be0c1ae0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_igw_01",
            "aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_table2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411194033911:route-table/rtb-0f3f8b17a61e8da67",
            "id": "rtb-0f3f8b17a61e8da67",
            "owner_id": "411194033911",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0dd5f230f09577bc0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-route-table2"
            },
            "tags_all": {
              "Name": "my-route-table2"
            },
            "timeouts": null,
            "vpc_id": "vpc-04653b7f9be0c1ae0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.my_elastic_ip_01",
            "aws_nat_gateway.my_nat1",
            "aws_subnet.my_subnet_01",
            "aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_table3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411194033911:route-table/rtb-0d77ef4ee3a934ab4",
            "id": "rtb-0d77ef4ee3a934ab4",
            "owner_id": "411194033911",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02d4bed549d94386c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-route-table3"
            },
            "tags_all": {
              "Name": "my-route-table3"
            },
            "timeouts": null,
            "vpc_id": "vpc-04653b7f9be0c1ae0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_igw_01",
            "aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_table4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411194033911:route-table/rtb-0fb1fd1e47f6c774d",
            "id": "rtb-0fb1fd1e47f6c774d",
            "owner_id": "411194033911",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01097ed8c56b566a9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-route-table4"
            },
            "tags_all": {
              "Name": "my-route-table4"
            },
            "timeouts": null,
            "vpc_id": "vpc-04653b7f9be0c1ae0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.my_elastic_ip_02",
            "aws_nat_gateway.my_nat2",
            "aws_subnet.my_subnet_02",
            "aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_subnet_assoc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e007142a27954210",
            "route_table_id": "rtb-0b36b02c37caf445f",
            "subnet_id": "subnet-0be79560a240d963e"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw_01",
            "aws_route_table.my_route_table1",
            "aws_subnet.my_subnet_01",
            "aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_subnet_assoc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-097472db9b1ab1ff9",
            "route_table_id": "rtb-0f3f8b17a61e8da67",
            "subnet_id": "subnet-04bf2dce7e37a2103"
          },
          "dependencies": [
            "aws_eip.my_elastic_ip_01",
            "aws_nat_gateway.my_nat1",
            "aws_route_table.my_route_table2",
            "aws_subnet.my_subnet_01",
            "aws_subnet.private_1",
            "aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_subnet_assoc3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c36fa145f66ce6ce",
            "route_table_id": "rtb-0d77ef4ee3a934ab4",
            "subnet_id": "subnet-0e315526dff890e90"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw_01",
            "aws_route_table.my_route_table3",
            "aws_subnet.my_subnet_02",
            "aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_subnet_assoc4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0662ce9cbeb146acc",
            "route_table_id": "rtb-0fb1fd1e47f6c774d",
            "subnet_id": "subnet-0dcdb667980236db8"
          },
          "dependencies": [
            "aws_eip.my_elastic_ip_02",
            "aws_nat_gateway.my_nat2",
            "aws_route_table.my_route_table4",
            "aws_subnet.my_subnet_02",
            "aws_subnet.private_2",
            "aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411194033911:security-group/sg-07587162f5bf7048d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07587162f5bf7048d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "first-lab",
            "name_prefix": "",
            "owner_id": "411194033911",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04653b7f9be0c1ae0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example_lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411194033911:security-group/sg-0452e2525e82c3cde",
            "description": "Example Load Balancer Security Group",
            "egress": [],
            "id": "sg-0452e2525e82c3cde",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "example-lb-sg",
            "name_prefix": "",
            "owner_id": "411194033911",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04653b7f9be0c1ae0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example_lb_sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411194033911:security-group/sg-0c0ab3c6c75c9f6c3",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c0ab3c6c75c9f6c3",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "example-lb-sg1",
            "name_prefix": "",
            "owner_id": "411194033911",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04653b7f9be0c1ae0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example_lb_sg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411194033911:security-group/sg-03e1e616ded03d0b6",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-03e1e616ded03d0b6",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "example-lb-sg2",
            "name_prefix": "",
            "owner_id": "411194033911",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04653b7f9be0c1ae0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411194033911:subnet/subnet-0be79560a240d963e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be79560a240d963e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411194033911",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_subnet_01"
            },
            "tags_all": {
              "Name": "my_subnet_01"
            },
            "vpc_id": "vpc-04653b7f9be0c1ae0"
          },
          "dependencies": [
            "aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnet_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411194033911:subnet/subnet-0e315526dff890e90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e315526dff890e90",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411194033911",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_subnet_02"
            },
            "tags_all": {
              "Name": "my_subnet_02"
            },
            "vpc_id": "vpc-04653b7f9be0c1ae0"
          },
          "dependencies": [
            "aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411194033911:subnet/subnet-04bf2dce7e37a2103",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04bf2dce7e37a2103",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411194033911",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-1"
            },
            "tags_all": {
              "Name": "Private-1"
            },
            "vpc_id": "vpc-04653b7f9be0c1ae0"
          },
          "dependencies": [
            "aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411194033911:subnet/subnet-0dcdb667980236db8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dcdb667980236db8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411194033911",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-2"
            },
            "tags_all": {
              "Name": "Private-2"
            },
            "vpc_id": "vpc-04653b7f9be0c1ae0"
          },
          "dependencies": [
            "aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411194033911:vpc/vpc-04653b7f9be0c1ae0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cd06f7a21cbb7a1f",
            "default_route_table_id": "rtb-07a3ee5ef1048a4d8",
            "default_security_group_id": "sg-0dfe27bdce5af8883",
            "dhcp_options_id": "dopt-0a1b2f3f6a4cd231f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04653b7f9be0c1ae0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07a3ee5ef1048a4d8",
            "owner_id": "411194033911",
            "tags": {
              "Name": "my_vpc_01"
            },
            "tags_all": {
              "Name": "my_vpc_01"
            }
          }
        }
      ]
    }
  ]
}